@@ -1,3 +1,8 @@
+2009-08-28  vadim  <vadim@vk.crocodile.org>
+
+	* Interface.cpp (Interface::getOptionsObjectConst): Added
+	Interface::getOptionsObjectconst(), Interface::isSlave()
+
 2009-08-24  vadim  <vadim@vk.crocodile.org>
 
 	* Compiler_cluster.cpp (Compiler::processFailoverGroup): cluster
